--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <Ul>
@@ -26,15 +26,15 @@
         <div class="banner">
 
             <div class="banner-content">
-                <h4 class="banner-greetings">Hi, I am</h4>
+                <h4 class="banner-greetings dark-2">Hi, I am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                <p class="banner-description dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download Cv</button>
                 <button class="btn-primary">Contact</button>
 
             </div>
-            <img src="images/hardy.png" alt="">
+            <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
     </header>
 
