--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <Ul>
@@ -28,7 +28,8 @@
             <div class="banner-content">
                 <h4 class="banner-greetings dark-2">Hi, I am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                <p class="banner-description dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly
+                    he.
                     Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download Cv</button>
                 <button class="btn-primary">Contact</button>
@@ -36,10 +37,16 @@
             </div>
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
+    
     </header>
 
     <main>
-
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3> 
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+        </section>
     </main>
 
     <footer>
