--- a/index.html
+++ b/index.html
@@ -46,6 +46,29 @@
             <p class="section-description">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
             </p>
+            <div class="about-items">
+                 <div class="about-item">
+                    <p class="item-title dark-2">Name</p>
+                    <p class="item-description">Mary Hardy</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title dark-2">Email</p>
+                    <p class="item-description">hardy@gmail.com</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title dark-2">Date of birth</p>
+                    <p class="item-description">01 January 1987</p>
+                 </div>
+                 <div class="about-item">
+                    <p class="item-title dark-2">From</p>
+                    <p class="item-description">Dhaka Bangladesh</p>
+                 </div>   
+            </div>
+        </section>  
+
+        <section class="skils">
+            <h3 class="section-title">What I Do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
         </section>
     </main>
 
